<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/dimension_40"
            android:src="@drawable/profile"
            android:background="@drawable/perfect_circular_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_40"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_matricul"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_level"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_faculty"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText9" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_department"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText10" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_20"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/enter_phone_number"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText12" />

        <Button
            android:id="@+id/save_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_40"
            android:layout_marginBottom="@dimen/dimension_40"
            android:layout_marginStart="@dimen/dimension_20"
            android:layout_marginEnd="@dimen/dimension_20"
            android:background="@drawable/circular_background"
            android:text="@string/save_info"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText14" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>