<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAcivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2">

            <TextView
                android:id="@+id/sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER INTO CAMEROON HND APP"
                android:layout_marginLeft="@dimen/dimension_20"
                android:layout_marginRight="@dimen/dimension_20"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_in_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimension_60"
            android:paddingBottom="@dimen/dimension_60"
            android:paddingLeft="@dimen/dimension_20"
            android:paddingRight="@dimen/dimension_20"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/enter_email_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimension_20"
                    android:textColorHint="@color/colorBlack"
                    android:textColor="@color/colorBlack"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"/>

                <EditText
                    android:id="@+id/enter_password_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimension_20"
                    android:textColorHint="@color/colorBlack"
                    android:textColor="@color/colorBlack"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/re_enter_password_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimension_20"
                    android:textColorHint="@color/colorBlack"
                    android:textColor="@color/colorBlack"
                    android:ems="10"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:text="@string/condition_agremment" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.5">

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dimension_30"
                    android:text="Sign up"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/dimension_20"
                    android:paddingRight="@dimen/dimension_20"
                    android:paddingTop="@dimen/dimension_8dp"
                    android:paddingBottom="@dimen/dimension_8dp"
                    android:background="@drawable/circular_background"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/have_an_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="15dp"
                    android:text="@string/have_and_account_"
                    android:textAlignment="center"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>